# Outdoor-Racing-Rosmaster-R2-with-tilt-lidar

./: Outdoor_race_ROSMASTER_R2_tilt_lidar.md  README.md  README_real_car_8th_grade.md  README_real_car_8th_grade_yahboom_bringup.md  README_real_car_full_rewrite.md  TG30_Sidewalk_Racer_COMPLETE_README.md  test_stack.sh
src/r2_tg30_race/: CMakeLists.txt  package.xml
src/r2_tg30_race/config/: follow_the_gap.yaml  pure_pursuit.yaml  scan_filters.yaml  steering_modifier.yaml
src/r2_tg30_race/launch/: mapping_gmapping.launch  racing_stack.launch  tg30_bringup.launch
src/r2_tg30_race/rviz/: README.txt
src/r2_tg30_race/scripts/: follow_the_gap.py  pure_pursuit_twist.py  scan_to_cloud.py  steering_modifier.py
ws_r2_tg30_race_pkg/: README.md
ws_r2_tg30_race_pkg/r2_tg30_race/: CMakeLists.txt  package.xml
ws_r2_tg30_race_pkg/r2_tg30_race/config/: ackermann_bridge.yaml  follow_the_gap.yaml  joystick_deadman.yaml  pointcloud_to_laserscan.yaml  pure_pursuit.yaml  scan_filters.yaml  steering_modifier.yaml
ws_r2_tg30_race_pkg/r2_tg30_race/launch/: mapping_cartographer.launch  mapping_gmapping.launch  octomap.launch  racing_stack.launch  scan_cleanup.launch  tg30_bringup.launch  view_racing.launch
ws_r2_tg30_race_pkg/r2_tg30_race/maps/: README.txt
ws_r2_tg30_race_pkg/r2_tg30_race/rviz/: localization.rviz  mapping.rviz
ws_r2_tg30_race_pkg/src/r2_tg30_race/: CMakeLists.txt  package.xml
ws_r2_tg30_race_pkg/src/r2_tg30_race/bags/: README.txt
ws_r2_tg30_race_pkg/src/r2_tg30_race/config/: deadman_gate.yaml  follow_the_gap.yaml  octomap.yaml  pointcloud_to_laserscan.yaml  steering_modifier.yaml  twist_mux.yaml
ws_r2_tg30_race_pkg/src/r2_tg30_race/launch/: localization_amcl.launch  racing_stack.launch  view_localization.launch  view_mapping.launch  view_racing.launch
ws_r2_tg30_race_pkg/src/r2_tg30_race/rviz/: README.txt  localization.rviz  mapping.rviz  racing.rviz
ws_r2_tg30_race_pkg/src/r2_tg30_race/scripts/: bag_control_recorder.py  cmdvel_gate.py  joy_deadman.py  steering_modifier.py  twist_to_ackermann.py  waypoint_extractor.py  waypoint_map_builder.py
ws_r2_tg30_race_pkg/src/r2_tg30_race/urdf/: tg30_mount_snippet.urdf
ws_r2_tg30_race_pkg/src/r2_tg30_race/waypoints/: waypoints.yaml
ws_r2_tg30_race_pkg/src/ydlidar_ros_driver/: README_EXTERNAL_DRIVER.md
ws_r2_tg30_race_pkg/yahboomcar_description/urdf/: yahboomcar_R2.urdf.xacro
ws_r2_tg30_race_pkg/yahboomcar_nav/scripts/: voice_ctrl_test.py  yahboomcar.lua
