<?xml version="1.0"?>
<package format="2">
  <name>r2_tg30_race</name>
  <version>0.2.0</version>
  <description>Mapping, localization, waypoint extraction, pure pursuit, follow-the-gap, twist_mux, deadman gating, RViz, and Ackermann bridge tools for a ROSMASTER R2 with a tilted YDLIDAR TG30.</description>

  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ackermann_msgs</depend>
  <depend>amcl</depend>
  <depend>geometry_msgs</depend>
  <depend>joy</depend>
  <depend>laser_filters</depend>
  <depend>laser_geometry</depend>
  <depend>map_server</depend>
  <depend>nav_msgs</depend>
  <depend>octomap_server</depend>
  <depend>pcl_ros</depend>
  <depend>pointcloud_to_laserscan</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>rviz</depend>
  <depend>sensor_msgs</depend>
  <depend>slam_gmapping</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>twist_mux</depend>
  <depend>visualization_msgs</depend>

  <export/>
</package>
